hoan thanh hien thị điểm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quanlysinhvien_app</string>
+    <string-array name="hocky_array">
+        <item>Học Kỳ 1</item>
+        <item>Học Kỳ 2</item>
+    </string-array>
+
 </resources>
