[UPDATES ]  Fix giao diện Hienthidiemdanh và BieudoThongKE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quanlysinhvien_app</string>
+    <string name="app_name">QLSV-Plus</string>
     <string-array name="hocky_array">
         <item>Học Kỳ 1</item>
         <item>Học Kỳ 2</item>
